--- a/web/src/features/templates/detailsPageTemplate/details-page-template.module.scss
+++ b/web/src/features/templates/detailsPageTemplate/details-page-template.module.scss
@@ -11,6 +11,9 @@
     "Content Sidebar";
   grid-column-gap: 32px;
   grid-row-gap: 0;
+  @media only screen and (max-width: 900px) {
+    grid-column-gap: 12px;
+  }
 }
 .pageSidebarWrapper {
   width: 0;
@@ -24,6 +27,9 @@
 }
 .detailsPageContent {
   grid-area: Content;
+  @media only screen and (max-width: 700px) {
+    padding-right: 12px;
+  }
 }
 .detailsPageTitle {
   grid-area: Title;
