--- a/web/src/features/templates/tablePageTemplate/table-page-template.module.scss
+++ b/web/src/features/templates/tablePageTemplate/table-page-template.module.scss
@@ -105,6 +105,7 @@
 .tableControlsButtonGroup {
   display: grid;
   grid-auto-flow: column;
+  grid-template-columns: auto min-content;
   grid-column-gap: 4px;
 }
 .tableControlsButtonWrapper {
