--- a/web/src/features/templates/templates.module.scss
+++ b/web/src/features/templates/templates.module.scss
@@ -2,21 +2,33 @@
   padding-top: 32px;
   display: grid;
   grid-auto-flow: column;
+  grid-template-columns: 50% 50%;
   justify-content: space-between;
   grid-area: Controls;
   padding-bottom: 16px;
   align-items: end;
+  @media only screen and (max-width: 900px) {
+    padding-top: 16px;
+  }
   @media only screen and (max-width: 700px) {
+    grid-template-columns: auto;
     grid-auto-flow: row;
     grid-row-gap: 4px;
     padding-top: 12px;
     width: calc(100vw - 24px);
     padding-bottom: 8px;
+    padding-right: 12px;
   }
 }
 
 .titleContainer {
   font-size: var(--font-XXL-regular);
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  @media only screen and (max-width: 700px) {
+    width: calc(100vw - 24px);
+  }
   @media only screen and (max-width: 700px) {
     font-size: var(--font-L-regular);
   }
