--- a/web/src/features/timeIntervalSelect/interval_select.scss
+++ b/web/src/features/timeIntervalSelect/interval_select.scss
@@ -20,7 +20,7 @@
   display: grid;
   grid-auto-flow: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: end;
   z-index: 20;
 
   .time-travel-arrow {
